# sq_docker

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: cowsay-docker.yml  cowsay.yml
bedtools_ng/: __init__.py  __main__.py  count_overlaps.py  utils.py
bedtools_ng/test/: count_overlaps_test.py
data/: chroms.bed  grch38_transcripts.bed
scripts/: integration_test.sh
snippets/: 000_installing_proj_on_ubuntu.sh  001_docker_commands_cheatsheet.sh  002_apptainer_commands_cheatsheet.sh
