# Copyright (C) 2022 Roberto Rossini <roberros@uio.no>
# SPDX-License-Identifier: MIT

# Inspired by https://github.com/dib-lab/screed

[metadata]
name = bedtools-ng
description = a silly Python replacement for BEDtools used to illustrate the use of Docker containers and GitHub actions
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/robomics/ci-and-docker-workshop
author = Roberto Rossini
author_email = roberros@uio.no
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Windows :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Documentation = https://github.com/robomics/ci-and-docker-workshop
    Source = https://github.com/robomics/ci-and-docker-workshop/wiki
    Tracker = https://github.com/robomics/ci-and-docker-workshop/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bioframe
python_requires = >=3.8
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6.2
    setuptools_scm_git_archive
    wheel

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    bedtools-ng = bedtools_ng.__main__:main

[options.extras_require]
test =
    pytest >= 5.3
all =
    %(test)s